# robotrace-shortcut-path-planner

./: .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
data/courses/: LICENSE.robotrace_course_cad  README.md  board_boundaries.json
data/courses/normalized/: 2011alljapan_pre.tsv  2012alljapan_pre.tsv  2013alljapan_pre.tsv  2013hokushinetsu.tsv  2015alljapan.tsv  2015alljapan_pre.tsv  2016alljapan.tsv  2017alljapan.tsv  2017alljapan_pre.tsv  2018alljapan.tsv  2018student.tsv  2019alljapan.tsv  2019east.tsv  2019kansai.tsv  2020alljapan.tsv  2020shorttrack.tsv  2021alljapan.tsv  2022alljapan.tsv  2022east.tsv  2022student.tsv  2023east.tsv  2023kansai.tsv  2023student.tsv  2024alljapan.tsv  2024east.tsv  2024kansai.tsv  2024student.tsv  2025alljapan.tsv  2025east.tsv  2025kansai.tsv  2025student.tsv
data/vehicle/: LN5_footprint.json  README.md
docs/: design.md  handoff-2025alljapan.md
embedded/: README.md  VT_shortcut_path_adapter.inc  host_harness.c  shortcut_curvature_limiter.c  shortcut_curvature_limiter.h
src/robotrace_shortcut_lab/: __init__.py  algorithm.py  cli.py  course.py  deep_planner.py  evaluation.py  firmware_current.py  geometry.py  global_planner.py  legal_planner.py  legality.py  model.py  models.py  portable.py  report.py
tests/: test_deep_planner.py  test_global_planner.py  test_legality.py  test_planner.py  test_shortcut_lab.py
tools/: check_ccrx.py  verify_embedded.py
