[project]
name = "robotrace-shortcut-lab"
version = "0.2.0"
description = "Fast geometric shortcut-path study for LN5.x"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["matplotlib>=3.9,<4", "numpy>=2.0,<3"]

[project.scripts]
robotrace-shortcut = "robotrace_shortcut_lab.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robotrace_shortcut_lab = ["py.typed"]
