[project]
name = "robotrace-shortcut-lab"
version = "1.0.0"
description = "Deterministic shortcut path and predicted-time comparison for Robotrace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["matplotlib>=3.9,<4", "numpy>=2.0,<3", "shapely>=2.1,<3"]

[project.scripts]
robotrace-shortcut = "robotrace_shortcut_lab.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
robotrace_shortcut_lab = ["py.typed"]
